modified the title and added to a paragraph

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Functions</title>
+  <title>Functions (change for sprint 2 project) </title>
 </head>
 
 <body>
@@ -10,6 +10,7 @@
   <p>Please load this file in VSCode and Chrome, and open the Console in Chrome Dev Tools.</p>
   <p>Work through the challenges found inside the script tag in this document,
     until the Console reports all tests passing.</p>
+    <p>This is just a test for uploading changes to git hub</p>
 
   <script>
     // In CHALLENGEs 1-5 you will complete some functions.
